# nowandthen

./: CMakeLists.txt
data/: CMakeLists.txt  nowandthen.desktop
data/icons/: icon.rc  nowandthen.icns
data/shaders/: vertex.glsl  vhs.glsl
data/sounds/: ball.flac  music.flac  yay1.flac  yay2.flac  yay3.flac
src/: common.c  common.h  main.c
src/gamestates/: dosowisko.c  empty.c  game.c  holypangolin.c  loading.c
